changes on pdf raport

--- a/Lab2/tex/Chapter_1.tex
+++ b/Lab2/tex/Chapter_1.tex
@@ -46,21 +46,42 @@ Am intilnit probleme cu operatiile cu numere zecimale si cu lucru cu tastatura.
 
 
 
-1. Calculator standard
 
-\includegraphics{Cattura.JPG}
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=0.5\textwidth]{Cattura.JPG}
+	
+	\caption{Calculator standard}
+	
+	\label{Im_label}
+	
+\end{figure}
 
-\clearpage
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura1.JPG}
+	
+	\caption{Calculator stiintific}
+	
+	\label{Im_label}
+	
+\end{figure}
 
-2. Calculator stiintifc
-
-\includegraphics{Cattura1.JPG}
-
-\clearpage
-
-3. Istoria
-
-\includegraphics{Cattura2.JPG}
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura2.JPG}
+	
+	\caption{Istoria calculatorului}
+	
+	\label{Im_label}
+	
+\end{figure}
 
 
 
