--- a/Lab2/tex/Conclusions.tex
+++ b/Lab2/tex/Conclusions.tex
@@ -2,19 +2,15 @@
 \section*{Concluzie}
 
 
-Interfata grafica este numit sistemul de afisaj grafic-vizual pe un ecran, situat functional intre utilizator si dispozitive electronice cum ar fi computere, dispozitive personale de tip hand-held (playere MP3, playere media portabile, dispozitive de jucat), aparate electrocasnice si unele echipamente de birou. Pentru a prezenta toate informatile si actiunile disponibile, un GUI ofera pictograme si indicatori vizuali, in contrast cu interfetele bazate pe text, care ofera doar nume de comenzi (care trebuie tastate) sau navigatia text.
-
-In aceasta lucrare de laborator mi-am dezvoltat abilitatile practice in GUI Development. Am creat propriul meu calculator, lucru care la prima vedere imi paruse complicat. Am intilnit probleme dar cu calm, documentindu-ma ale-am rezolvat. Cunoaterea interfetei grafice este importanta in dezvoltarea mea ca IT student. 
+Dezvoltarea web este un termen larg, care cuprinde orice activitate legata de dezvoltarea unui sit web. Aceasta poate include dezvoltarea afacerilor prin comert electronic (e-commerce), web design, dezvoltarea de continut web, programare specifica, configurarea serverelor web, etc. Dezvoltarea web include atit realizarea unor simple pagini web statice cu text, până la cele mai complexe aplicaţii Internet, afaceri electronice (ebusiness), sau servicii de reţele sociale.
 
 
-Interfata grafica trebuie sa fie:
-• Consistenta: Pentru o anume operatie sa se foloseasca acelasi obiect vizual. Accesul la operatii similare se face prin aceleasi actiuni utilizator (mouse, tastatura) si folosind acelasi obiect vizual.
-• Intuitiva: Interfata sa fie sugestiva, nefiind nevoie de documentatie sau de cursuri de pregatire.
-• Atractiva: Interfata trebuie sa aiba caracteristici estetice care sa atraga utilizatorul. O interfata aglomerata va indeparta utilizatorii.
-• Usor de utilizat: Operatiile simple trebuie sa se realizeze prin actiuni simple ale utilizatorului. Operatiile complexe trebuie sa se realizeze printr-un numar rezonabil de actiuni
-utilizator.
-• Usor de invatat: Orice actiune utilizator sa fie usor de memorat. Experienta acumulata in invatarea unor actiuni sa poata fi folosita la invatarea altor actiuni.  
+In aceasta lucrare de laborator mi-am dezvoltat abilitatile practice in Web Development. Am creat primul meu website, lucru care la prima vedere imi paruse complicat. Am intilnit probleme dar cu calm, documentindu-ma ale-am rezolvat. Cunoaterea web development este foarte importanta si interesanta ca student IT.
 
+
+Proiectarea paginilor web este un proces de conceptualizare, planificare, modelare şi execuţie a conţinutului media electronic livrat pe Internet într-o formă tehnică adecvată pentru interpretarea şi afişarea într-un browser web sau altă interfaţă grafică pentru utilizatori (graphical user interface, GUI).
+
+Scopul proiectării web este crearea unui sit web (o colecţie de fişiere electronice încărcate pe unul sau mai multe servere) cu conţinut (care poate include caracteristici sau interfeţe interactive) pentru utilizatorul final sub forma paginilor web.
 \clearpage
 
       
