--- a/Lab2/tex/Introduction.tex
+++ b/Lab2/tex/Introduction.tex
@@ -1,20 +1,19 @@
 
-\section*{Lucrarea de laborator \#2}
+\section*{Lucrarea de laborator \#3}
 
 
 
 
 \section{Scopul lucrarii de laborator}
 
-Studierea bazei si principiile GUI Development  .
+Studierea bazei si principiile Web Development  .
 
 \section{Obiective}
 
 
+-Realizarea unui simplu Web Site personal
+-Realizarea unui mockup corespunzatorul site-ului care urmeaza a fi realizat
+-Familiarizarea cu HTML si CSS
+-Interactiuni Javascript
 
- -Realizeaza un simplu GUI Calculator
-
--Operatiile simple: +,-,*,/,putere,radical,InversareSemn(+/-),operatii cu numere zecimale.
-
--Divizare proiectului in doua module - Interfata grafica(Modul GUI) si Modulul de baza(Core Module).
        
