--- a/Lab2/tex/biblio.tex
+++ b/Lab2/tex/biblio.tex
@@ -6,10 +6,10 @@
 	
 	
 	\bibitem{} {}
-	\texttt{http://www.aie.ugal.ro/sica/curs/Curs2.pdf}
+	\texttt{http://www.php.net}
 
      \bibitem{}	{}
-	 \texttt{https://msdn.microsoft.com/en-us/library/system.windows.forms.keyeventargs(v=vs.110).aspx}
+	 \texttt{https://www.navegabem.com}
 	 
 	 
 	 \bibitem{}{}
