--- a/Lab2/tex/Chapter_1.tex
+++ b/Lab2/tex/Chapter_1.tex
@@ -9,19 +9,19 @@
 
  Basic Level (nota 5 $||$ 6) : 
 
--Realizeaza un simplu GUI calculator care suporta functiile de baza: +, -, /, *.
+-Realizeaza un mini site cu 3 pagini statice
 
 
 Normal Level (nota 7 $||$ 8):
  
--Realizeaza un simplu GUI calculator care suporta urmatoare functii: +, -, /, *, putere, radical, InversareSemn(+/-).
+-Site-ul trebuie sa pastreze toata informatia intr-o baza de date
 
 
 Advanced Level (nota 9 $||$ 10):
 
--Realizeaza un simplu GUI calculator care suporta urmatoare functii: +, -, /, *, putere, radical, InversareSemn(+/-), operatii cu numere zecimale.
+-Site-ul trebuie sa contina AJAX Requests.
 
--Divizare proiectului in doua module - Interfata grafica(Modul GUI) si Modulul de baza(Core Module).
+-Implimentarea XHR sau JSON responses. Unele informatii trebuie sa fie dinamic incarcata pe pagina
 
 
 
@@ -31,13 +31,15 @@ Advanced Level (nota 9 $||$ 10):
 Linkul la repozitoriu: \texttt{https://github.com/dumitritag/MIDPS-lab}
 
 
-Interfata grafica (in engleza: Graphical User Interface sau GUI) este o interfata cu utilizatorul bazata pe un sistem de afisaj ce utilizeaza elemente grafice.
+Dezvoltarea de aplicatii web presupune doua provocari tehnice distincte: partea grafica, care imbracă intr-un mod ergonomic aplicaţia (webdesign), si dezvoltarea propriu-zisa a motorului aplicatiei (dezvoltarea web).
 
-Lucrarea data de laborator consta in crearea unui calculator stiintific pentru a acumula cunostinte mai profunde in GUI Development. IDE ales de mine este Visual Studio 2015, iar limbajul de programare este C++.
+Lucrarea data de laborator consta in crearea unui website pentru a acumula cunostinte mai profunde in Web Development. IDE ales de mine este NetBeans 8.2, iar limbajul de programare este php, HTML/CSS. Am lucrat cu bazele de date MySQL, serverul local WAMP si am operat cu Request-urile AJAX is am implementat JSON responses. 
 
-Mai intii de toate am creat un proiect "C++ Windows Form ". Am creat o forma noua. Am decis sa fac un calculator standard si unul stiintific cu mai multe instructiuni si sa am si o istorie in care sa vad operatiile precedente. Deci in forma am adaugat un ToolSripMenu care se numeste File si care consta din instructiunile Standard, Scientific, History si Exit. Apoi am creat text box-ul-"ecranul" calculatorului, un label in text box in care se va afisa numerele si operanzii introdusi, butoane si o list box in care se va afisa istoria. Am denumit butoanele, am creat functiile pentru calcule, functiile pentru ToolScripMenu. Initial cind vom rula programul va aparea un calculator standard. Alegind din ToolScripMenu Scientific, calculatorul se va modela in unul stiintific,Exit-pentru iesire si History-va aprea istoria, apasind din nou va disparea. Utilizatorul va vedea doar o singura tasta History, dar defapt ele sunt 2. Mai intii se apasa una,pentru a aparea istoria, tasta dispare si apare a doua cu aceeasi denumire-apasind-o dispare istoria si apare din nou acea prima tasta. Am elaborat un event KeyPress pentru a nu putea scrie caracterele in afara de cifre.
+Tematica website-lui meu este top tipurile de cafea. Este compus din 4 pagini: Casa, Cafea, Magazine, Despre si Management. Pagina Casa contine informatie generala despre cafea, efecte negative, efecte pozitive. Pagina Cafea contine tipurile de cafea si descrierea lor, informatia fiind stocata in baza de data phpMySQL. Pagina Magazine contine informatii despre unde se pot gasi aceste tipuri de cafea, adresa , poza lor. In pagina Management am implimentat CMS (Content Managemen System) prin adaugarea unui nou tip de cafea, incarcarea unei imagini si o vizualizarea a tipurilor de cafea, in care se gaseste opiunea de stergere. Am creat si o pagina de tip feedback.
 
-Am intilnit probleme cu operatiile cu numere zecimale si cu lucru cu tastatura.  
+
+
+Am intilnit probleme cu operatiile cu implementarea Ajax requests si JSON responses.  
  
 
 
@@ -53,7 +55,7 @@ Am intilnit probleme cu operatiile cu numere zecimale si cu lucru cu tastatura.
 	
 	\includegraphics[width=0.5\textwidth]{Cattura.JPG}
 	
-	\caption{Calculator standard}
+	\caption{Pagina Casa}
 	
 	\label{Im_label}
 	
@@ -65,7 +67,7 @@ Am intilnit probleme cu operatiile cu numere zecimale si cu lucru cu tastatura.
 	
 	\includegraphics[width=1.0\textwidth]{Cattura1.JPG}
 	
-	\caption{Calculator stiintific}
+	\caption{Pagina Cafea}
 	
 	\label{Im_label}
 	
@@ -77,14 +79,84 @@ Am intilnit probleme cu operatiile cu numere zecimale si cu lucru cu tastatura.
 	
 	\includegraphics[width=1.0\textwidth]{Cattura2.JPG}
 	
-	\caption{Istoria calculatorului}
+	\caption{Pagina Magazine}
+	
+	\label{Im_label}
+	
+\end{figure}
+
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura3.JPG}
+	
+	\caption{Pagina Despre}
+	
+	\label{Im_label}
+	
+\end{figure}
+
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura4.JPG}
+	
+	\caption{Pagina Management}
 	
 	\label{Im_label}
 	
 \end{figure}
 
 
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura5.JPG}
+	
+	\caption{Adaugarea unui tip de cafea}
+	
+	\label{Im_label}
+	
+\end{figure}
 
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura6.JPG}
+	
+	\caption{Adaugarea unei imagini}
+	
+	\label{Im_label}
+	
+\end{figure}
+
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura7.JPG}
+	
+	\caption{Vizualizarea}
+	
+	\label{Im_label}
+	
+\end{figure}
+
+\begin{figure}[!ht]
+	
+	\centering
+	
+	\includegraphics[width=1.0\textwidth]{Cattura8.JPG}
+	
+	\caption{Feedback}
+	
+	\label{Im_label}
+	
+\end{figure}
 
 \clearpage
         
