--- a/Lab2/tex/Title.tex
+++ b/Lab2/tex/Title.tex
@@ -18,7 +18,7 @@
 	
 	\textsc{\Large Medii Interactive de Dezvoltare a Produselor Soft}\\[0.5cm] % Major heading such as course name
 	
-	\textsc{\large Lucrarea de laborator\#2}\\[0.5cm] % Minor heading such as course title
+	\textsc{\large Lucrarea de laborator\#3}\\[0.5cm] % Minor heading such as course title
 	
 	%\textsc{\large Laboratory work}\\[0.5cm] % Minor heading such as course title
 	
@@ -38,7 +38,7 @@
 	
 	\HRule \\[0.4cm]
 	
-	{ \LARGE \bfseries GUI Development  }\\[0.4cm] % Title of your document
+	{ \LARGE \bfseries WEb Development  }\\[0.4cm] % Title of your document
 	
 	\HRule \\[1.5cm]
 	
