--- a/Lab3/raport/Conclusions.tex
+++ b/Lab3/raport/Conclusions.tex
@@ -1,13 +1,11 @@
 \section*{Concluzie}
 
+In aceasta lucrare de laborator mi-am dezvoltat abilitatile practice in Web Development. Am creat primul meu website, lucru care la prima vedere imi paruse complicat. Am intilnit probleme dar cu calm, documentindu-ma le-am rezolvat.
 
-Dezvoltarea web este un termen larg, care cuprinde orice activitate legata de dezvoltarea unui sit web. Aceasta poate include dezvoltarea afacerilor prin comert electronic (e-commerce), web design, dezvoltarea de continut web, programare specifica, configurarea serverelor web, etc. Dezvoltarea web include atit realizarea unor simple pagini web statice cu text, pina la cele mai complexe aplicaţii Internet, afaceri electronice (ebusiness), sau servicii de retele sociale.
-
-
-In aceasta lucrare de laborator mi-am dezvoltat abilitatile practice in Web Development. Am creat primul meu website, lucru care la prima vedere imi paruse complicat. Am intilnit probleme dar cu calm, documentindu-ma ale-am rezolvat. Cunoaterea web development este foarte importanta si interesanta ca student IT.
+Dezvoltarea web este un termen larg, care cuprinde orice activitate legata de dezvoltarea unui site web. Aceasta poate include dezvoltarea afacerilor prin comert electronic (e-commerce), web design, dezvoltarea de continut web, programare specifica, configurarea serverelor web, etc. Dezvoltarea web include atit realizarea unor simple pagini web statice cu text, pina la cele mai complexe aplicaţii Internet, afaceri electronice (ebusiness), sau servicii de retele sociale.
 
 
 Proiectarea paginilor web este un proces de conceptualizare, planificare, modelare şi executie a continutului media electronic livrat pe Internet intr-o forma tehnica adecvata pentru interpretarea si afisarea intr-un browser web sau alta interfata grafica pentru utilizatori (graphical user interface, GUI).
 
-Scopul proiectarii web este crearea unui sit web (o colectie de fisiere electronice incarcate pe unul sau mai multe servere) cu continut (care poate include caracteristici sau interfete interactive) pentru utilizatorul final sub forma paginilor web.
+Scopul proiectarii web este crearea unui site web (o colectie de fisiere electronice incarcate pe unul sau mai multe servere) cu continut (care poate include caracteristici sau interfete interactive) pentru utilizatorul final sub forma paginilor web.
 \clearpage
