--- a/Lab3/raport/Chapter_1.tex
+++ b/Lab3/raport/Chapter_1.tex
@@ -30,13 +30,14 @@ Linkul la repozitoriu: \texttt{https://github.com/dumitritag/MIDPS-lab}
 
 Dezvoltarea de aplicatii web presupune doua provocari tehnice distincte: partea grafica, care imbraca intr-un mod ergonomic aplicatia (webdesign), si dezvoltarea propriu-zisa a motorului aplicatiei (dezvoltarea web).
 
-Lucrarea data de laborator consta in crearea unui website pentru a acumula cunostinte mai profunde in Web Development. IDE ales de mine este NetBeans 8.2, iar limbajul de programare este php, HTML/CSS. Am lucrat cu bazele de date MySQL, serverul local WAMP si am operat cu Request-urile AJAX is am implementat JSON responses. 
+Lucrarea data de laborator consta in crearea unui website pentru a acumula cunostinte mai profunde in Web Development. IDE ales de mine este NetBeans 8.2, iar limbajul de programare este php, HTML/CSS. Am lucrat cu bazele de date MySQL, serverul local WAMP si am operat cu Request-urile AJAX. 
 
-Tematica website-lui meu este top tipurile de cafea. Este compus din 4 pagini: Casa, Cafea, Magazine, Despre si Management. Pagina Casa contine informatie generala despre cafea, efecte negative, efecte pozitive. Pagina Cafea contine tipurile de cafea si descrierea lor, informatia fiind stocata in baza de data phpMySQL. Pagina Magazine contine informatii despre unde se pot gasi aceste tipuri de cafea, adresa , poza lor. In pagina Management am implimentat CMS (Content Managemen System) prin adaugarea unui nou tip de cafea, incarcarea unei imagini si o vizualizarea a tipurilor de cafea, in care se gaseste opiunea de stergere. Am creat si o pagina de tip feedback.
+Tematica website-lui meu este top tipurile de cafea. Este compus din 5 pagini: Casa, Cafea, Magazine, Despre si Management. Pagina Casa contine informatie generala despre cafea, efecte negative, efecte pozitive. Pagina Cafea contine tipurile de cafea si descrierea lor, informatia fiind stocata in baza de data phpMySQL. Pagina Magazine contine informatii despre unde se pot gasi aceste tipuri de cafea, adresa , poza lor. In pagina Management am implimentat CMS (Content Management System) prin adaugarea unui nou tip de cafea, incarcarea unei imagini. 
+
+Un sistem de administrare a continutului sau CMS este un sistem software creat pentru automatizarea cit mai deplina a gestiunii continutului, in special a site-urilor web. Scopul este de a reduce sau elimina interventia programatorilor la editarea si administrarea site-urilor lor.
 
 
-
-Am intilnit probleme cu operatiile cu implementarea Ajax requests si JSON responses.  
+Am intilnit probleme cu operatiile cu implementarea Ajax requests .  
  
 
 
@@ -137,19 +138,7 @@ Am intilnit probleme cu operatiile cu implementarea Ajax requests si JSON respon
 	
 	\includegraphics[width=1.0\textwidth]{Cattura7.JPG}
 	
-	\caption{Vizualizarea}
-	
-	\label{Im_label}
-	
-\end{figure}
-
-\begin{figure}[!ht]
-	
-	\centering
-	
-	\includegraphics[width=1.0\textwidth]{Cattura8.JPG}
-	
-	\caption{Feedback}
+	\caption{Ajax}
 	
 	\label{Im_label}
 	
